@@ -51,7 +51,8 @@ write-qt.h \
 po-time.h plural-table.h lang-table.h format.h filters.h \
 xgettext.h x-c.h x-po.h x-sh.h x-python.h x-lisp.h x-elisp.h x-librep.h \
 x-scheme.h x-smalltalk.h x-java.h x-properties.h x-csharp.h x-awk.h x-ycp.h \
-x-tcl.h x-perl.h x-php.h x-stringtable.h x-rst.h x-glade.h libexpat-compat.h
+x-tcl.h x-perl.h x-php.h x-stringtable.h x-rst.h x-glade.h x-gsettings.h \
+libexpat-compat.h
 
 EXTRA_DIST += FILES project-id ChangeLog.0
 
@@ -173,7 +174,7 @@ endif
 xgettext_SOURCES += \
   x-c.c x-po.c x-sh.c x-python.c x-lisp.c x-elisp.c x-librep.c x-scheme.c \
   x-smalltalk.c x-java.c x-csharp.c x-awk.c x-ycp.c x-tcl.c x-perl.c x-php.c \
-  x-rst.c x-glade.c libexpat-compat.c
+  x-rst.c x-glade.c x-gsettings.c libexpat-compat.c
 if !WOE32DLL
 msgattrib_SOURCES = msgattrib.c
 else
